[gd_scene load_steps=48 format=3 uid="uid://cib36sg3dy4n8"]

[ext_resource type="Script" uid="uid://bds5ci3jv4xs8" path="res://assets/Player script/nyctophobia_player.gd" id="1_t1ppf"]
[ext_resource type="Texture2D" uid="uid://by2jk5c7bmhfg" path="res://assets/PlayerSpriteAnimated/player_sprite_sheet.png" id="2_21y1p"]
[ext_resource type="AudioStream" uid="uid://esye371gywvf" path="res://assets/Audio/grass_jump.wav" id="2_jpfve"]
[ext_resource type="AudioStream" uid="uid://ckcibm6qk31m" path="res://assets/Audio/Wood_jump.wav" id="3_24h1s"]
[ext_resource type="AudioStream" uid="uid://85xhkutawcs2" path="res://assets/Audio/stone_jump.wav" id="4_3sywi"]
[ext_resource type="AudioStream" uid="uid://ld4rfi0i8v1s" path="res://assets/Audio/grass_walk.wav" id="5_8gbsv"]
[ext_resource type="AudioStream" uid="uid://b60b38s70exj2" path="res://assets/Audio/Wood_walk.wav" id="6_ycphv"]
[ext_resource type="AudioStream" uid="uid://pm12cqsjitg2" path="res://assets/Audio/Stone_footstep.wav" id="7_dvxgq"]
[ext_resource type="AudioStream" uid="uid://dkjgw5kh8kiff" path="res://assets/Audio/Wall_jump.wav" id="8_g50vo"]
[ext_resource type="AudioStream" uid="uid://fxuvo1008e7h" path="res://assets/Audio/grass_land.wav" id="9_sa3b2"]
[ext_resource type="AudioStream" uid="uid://b48fbsvlss1ft" path="res://assets/Audio/Wood_land.wav" id="10_4krb7"]
[ext_resource type="AudioStream" uid="uid://byfkpu1vlacum" path="res://assets/Audio/Stone_land.wav" id="11_m0k0a"]
[ext_resource type="AudioStream" uid="uid://canolrioteo4" path="res://assets/Audio/climbing.wav" id="12_24h1s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f55vd"]
atlas = ExtResource("2_21y1p")
region = Rect2(0, 256, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aiss1"]
atlas = ExtResource("2_21y1p")
region = Rect2(32, 256, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl6qm"]
atlas = ExtResource("2_21y1p")
region = Rect2(64, 256, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0cpy"]
atlas = ExtResource("2_21y1p")
region = Rect2(96, 256, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1inw"]
atlas = ExtResource("2_21y1p")
region = Rect2(0, 320, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0q1q"]
atlas = ExtResource("2_21y1p")
region = Rect2(32, 320, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt8wq"]
atlas = ExtResource("2_21y1p")
region = Rect2(0, 448, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rn7d2"]
atlas = ExtResource("2_21y1p")
region = Rect2(32, 448, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_21y1p"]
atlas = ExtResource("2_21y1p")
region = Rect2(0, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eykcb"]
atlas = ExtResource("2_21y1p")
region = Rect2(32, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xitl1"]
atlas = ExtResource("2_21y1p")
region = Rect2(0, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n83br"]
atlas = ExtResource("2_21y1p")
region = Rect2(32, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpfve"]
atlas = ExtResource("2_21y1p")
region = Rect2(64, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_24h1s"]
atlas = ExtResource("2_21y1p")
region = Rect2(96, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxjt5"]
atlas = ExtResource("2_21y1p")
region = Rect2(0, 192, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3a73"]
atlas = ExtResource("2_21y1p")
region = Rect2(32, 192, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjivp"]
atlas = ExtResource("2_21y1p")
region = Rect2(0, 384, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwgsh"]
atlas = ExtResource("2_21y1p")
region = Rect2(32, 384, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv0bx"]
atlas = ExtResource("2_21y1p")
region = Rect2(64, 384, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sywi"]
atlas = ExtResource("2_21y1p")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gbsv"]
atlas = ExtResource("2_21y1p")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycphv"]
atlas = ExtResource("2_21y1p")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvxgq"]
atlas = ExtResource("2_21y1p")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g50vo"]
atlas = ExtResource("2_21y1p")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sa3b2"]
atlas = ExtResource("2_21y1p")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4krb7"]
atlas = ExtResource("2_21y1p")
region = Rect2(192, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0k0a"]
atlas = ExtResource("2_21y1p")
region = Rect2(224, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_83v52"]
atlas = ExtResource("2_21y1p")
region = Rect2(256, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gajf"]
atlas = ExtResource("2_21y1p")
region = Rect2(288, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrkn0"]
atlas = ExtResource("2_21y1p")
region = Rect2(320, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_oay2s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f55vd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aiss1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl6qm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0cpy")
}],
"loop": true,
"name": &"Climb",
"speed": 5.0
}, {
"frames": [{
"duration": 2.5,
"texture": SubResource("AtlasTexture_b1inw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0q1q")
}],
"loop": true,
"name": &"Climb_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kt8wq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn7d2")
}],
"loop": false,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_21y1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eykcb")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_xitl1")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_n83br")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_jpfve")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_24h1s")
}],
"loop": false,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxjt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3a73")
}],
"loop": false,
"name": &"Jump_land",
"speed": 5.0
}, {
"frames": [{
"duration": 0.2,
"texture": SubResource("AtlasTexture_sjivp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwgsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fv0bx")
}],
"loop": false,
"name": &"Ledge_pull",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sywi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gbsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycphv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvxgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g50vo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sa3b2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4krb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0k0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83v52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gajf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrkn0")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3evso"]
height = 50.0

[sub_resource type="SegmentShape2D" id="SegmentShape2D_21y1p"]
a = Vector2(-10, 0)
b = Vector2(12, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_21y1p"]
size = Vector2(24, 1.5)

[node name="CharacterBody2D" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource("1_t1ppf")
WALL_JUMP_FORCE = 300
WALL_PUSH_FORCE = 100
WALL_JUMP_GRACE = 1.0
GRASS_JUMP_SFX = ExtResource("2_jpfve")
WOOD_JUMP_SFX = ExtResource("3_24h1s")
ROCK_JUMP_SFX = ExtResource("4_3sywi")
GRASS_FOOTSTEP_SFX = ExtResource("5_8gbsv")
WOOD_FOOTSTEP_SFX = ExtResource("6_ycphv")
ROCK_FOOTSEP_SFX = ExtResource("7_dvxgq")
WALL_JUMP_SFX = ExtResource("8_g50vo")
GRASS_LANDING_SFX = ExtResource("9_sa3b2")
WOOD_LANDING_SFX = ExtResource("10_4krb7")
ROCK_LANDING_SFX = ExtResource("11_m0k0a")
GRASS_LEDGE_PULL_SFX = ExtResource("2_jpfve")
WOOD_LEDGE_PULL_SFX = ExtResource("3_24h1s")
CLIMBING_SFX = ExtResource("12_24h1s")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_oay2s")
animation = &"Climb"

[node name="GroundRay" type="RayCast2D" parent="AnimatedSprite2D"]
target_position = Vector2(0, 34)

[node name="LedgeRay" type="RayCast2D" parent="AnimatedSprite2D"]
position = Vector2(0, -5)
target_position = Vector2(12, 0)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.15
drag_right_margin = 0.15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("CapsuleShape2D_3evso")

[node name="TopCollisionChecker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopCollisionChecker"]
position = Vector2(-1, -5)
shape = SubResource("SegmentShape2D_21y1p")

[node name="LedgeCollisionChecker" type="Area2D" parent="."]
position = Vector2(22, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LedgeCollisionChecker"]
position = Vector2(-23, -20)
shape = SubResource("SegmentShape2D_21y1p")

[node name="BottomCollisionChecker" type="Area2D" parent="."]
position = Vector2(-4, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomCollisionChecker"]
position = Vector2(3, 13)
shape = SubResource("SegmentShape2D_21y1p")

[node name="JumpCheat" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="JumpCheat"]
position = Vector2(0, 33)
shape = SubResource("RectangleShape2D_21y1p")

[node name="Player_sfx" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
bus = &"sfx"

[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_sprite_frame_changed"]
